syntax = "proto3";

package balancer.types.v1;

message Pools {
  repeated Pool pools = 1;
}

message Pool {
  string id = 1;
  string address = 2;
  uint64 log_ordinal = 3;
}

message PoolTokens {
  repeated PoolToken pool_tokens = 1;
}

message PoolToken {
  string id = 1;
  string address = 2;
  string pool_id = 3;
  string balance = 4;
  uint64 log_ordinal = 5;
}

message PoolTokenBalanceChanges {
  repeated PoolTokenBalanceChange pool_token_balance_changes = 1;
}

message PoolTokenBalanceChange {
  string pool_token_id = 1;
  string delta_balance = 2;
  uint64 log_ordinal = 3;
}
